tests/baselines/reference/nestedClassDeclaration.errors.txt
==== tests/cases/compiler/nestedClassDeclaration.ts (8 errors) ====
    // nested classes are not allowed
    
    class C {
        x: string;
        class C2 {
        ~~~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        }
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    function foo() {
        class C3 {
        ~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
        }
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    var x = {
        class C4 {
              ~~
!!! error TS1005: ':' expected.
                 ~
!!! error TS1005: ',' expected.
              ~~
!!! error TS2095: Could not find symbol 'C4'.
        }
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    